crates/parser/tests/parse/token.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..25
  MODULE@0..24
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..8 " "
    MODULE_FIELD_FUNC@8..23
      L_PAREN@8..9 "("
      KEYWORD@9..13 "func"
      WHITESPACE@13..14 " "
      PLAIN_INSTR@14..16
        INSTR_NAME@14..16 "br"
      WHITESPACE@16..17 " "
      ERROR@17..22 "0drop"
      R_PAREN@22..23 ")"
    R_PAREN@23..24 ")"
  WHITESPACE@24..25 "\n"

error: expected instruction name
  ┌─ token.wat:1:18
  │
1 │ (module (func br 0drop))
  │                  ^^^^^

error: unexpected token
  ┌─ token.wat:1:18
  │
1 │ (module (func br 0drop))
  │                  ^^^^^
